[package]
name = "ezsql"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = { version = "2" }
quote = "1.0"
proc-macro2 = "1.0"
serde = "1.0"
constructor = { path = "../constructor" }
common = { path = "../../common" }
mysql = "24.0"
indexmap = "2.2"
